# FastApi

./: .coverage  .gitattributes  .gitignore  Dockerfile  README.MD  README.md  build_info.py  docker-compose.yml  kaggle.json  pyproject.toml  requirements.txt  setup.py
.github/workflow/: python-tests.yml
.github/workflows/: main.yml  python-tests.yml
FastAPIStreamlit/: app.py
FastAPIStreamlit/page/: customers.py  fraude.py  statistique.py  transactions.py
app/: fraud_detection_service.py  main.py  main.py.backup
app/apibank.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/data/: import_data.py  load_data.py  load_transaction_paquet.py
app/models/: fraud_transaction.py  transaction_entry.py  transaction_response.py  transactions.py
app/route/: administration_routes.py  clients_routes.py  fraude_routes.py  main.py  statistiques_routes.py  transaction_routes.py
test/: administration_test.py  client_test.py  fraude_test.py  statistiques_test.py  test_load_data.py  transactions_test.py
